<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Black"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/footer">


        <com.example.axbat.tp_17_09.Control.HeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backTitle="Retour"
            app:mainTitle="Accueil">
        </com.example.axbat.tp_17_09.Control.HeaderView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/Dark">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tp_goe"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/propos"
                    android:textStyle="bold"
                    android:textColor="@color/Yellow"
                    android:layout_gravity="start"
                    android:layout_marginLeft="2dp"
                    android:background="@color/Dark"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/Black">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            android:background="@color/Black"
                            android:layout_marginVertical="2dp"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/Black"
                                android:text="@string/movieTitle"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:layout_marginLeft="20dp"
                                />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:background="@color/Black"
                                android:text="@string/movieTitleValue"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:textStyle="bold"
                                android:padding="0dp"
                                android:paddingLeft="10dp"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            android:background="@color/Black"
                            android:layout_marginVertical="2dp"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/Black"
                                android:text="@string/movieOriginal"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:layout_marginLeft="20dp" />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:background="@color/Black"
                                android:text="@string/movieOriginalValue"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:textStyle="bold"
                                android:padding="0dp"
                                android:paddingLeft="10dp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            android:background="@color/Black"
                            android:layout_marginVertical="2dp"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@color/Black"
                                android:text="@string/movieDescription"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:layout_marginLeft="20dp" />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:background="@color/Black"
                                android:text="@string/movieDescriptionValue"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:textStyle="bold"
                                android:padding="0dp"
                                android:paddingLeft="10dp"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            android:background="@color/Black"
                            android:layout_marginVertical="2dp"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/Black"
                                android:text="@string/movieKeywords"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:layout_marginLeft="20dp" />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:background="@color/Black"
                                android:text="@string/movieKeywordsValue"
                                android:gravity="start"
                                android:textColor="@color/White"
                                android:textStyle="bold"
                                android:padding="0dp"
                                android:paddingLeft="10dp"
                                />
                        </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:background="@color/Dark"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Partager"
                        android:textColor="@color/White"
                        android:layout_weight="1"
                        android:background="@drawable/btn_yellow"
                        android:drawableLeft="@drawable/ic_share"
                        android:drawableTint="@color/White"
                        android:layout_margin="12dp"
                        android:textSize="10dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Commenter"
                        android:textColor="@color/White"
                        android:layout_weight="1"
                        android:background="@drawable/btn_yellow"
                        android:drawableLeft="@drawable/ic_comment"
                        android:drawableTint="@color/White"
                        android:layout_margin="12dp"
                        android:textSize="8dp"/>
                    <Button
                        android:id="@+id/likebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Aimer"
                        android:textColor="@color/White"
                        android:layout_weight="1"
                        android:background="@drawable/btn_yellow"
                        android:drawableLeft="@drawable/ic_like"
                        android:drawableTint="@color/White"
                        android:layout_margin="12dp"
                        android:textSize="10dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/textcomments"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/Grey"
                    android:text="Liste des commentaires"
                    android:textColor="@color/White"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/catbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Categories"
                        android:textColor="@color/White"
                        android:layout_weight="1"
                        android:background="@drawable/btn_yellow"
                        android:layout_margin="12dp"
                        android:textSize="10dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Liste de films"
                        android:textColor="@color/White"
                        android:layout_weight="1"
                        android:background="@drawable/btn_yellow"
                        android:layout_margin="12dp"
                        android:textSize="10dp"/>

                </LinearLayout>
            </LinearLayout>



        </ScrollView>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="10"
        android:background="@color/Dark"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Say something"
            android:inputType="text"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/btnsend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_send"
            android:background="@color/Dark"
            android:layout_weight="9"
            android:tint="@color/Yellow"/>
    </LinearLayout>

</RelativeLayout>